<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Control Panel:</string>
    <string name="app_name">iARoC 2014</string>
    <string name="title_activity_setup">Setup</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="urban_label">Urban Challenge - Left Wall</string>
    <string name="urban_label_right">Urban Challenge - Right Wall</string>
    <string name="gold_label">Gold Rush</string>
    <string name="drag_label">Drag Race</string>
    <string name="Test_Label">Test All</string>
    <string name="Test_Ultra_Label">Test Ultra Sonic Sensors</string>
    <string name="chooseLabel">Choose the challenge to run:</string>
    <string name="start_label">Start</string>
    <color name="robertDarkRed">#B00000</color>
    <color name="white">#FFFFFF</color>
    <color name="black">#000000</color>
    <color name="red">#0000FF</color>
    <color name="blue">#0000FF</color>
    <color name="green">#00FF00</color>

</resources>
