<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ioio.examples.hello.Setup"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:id="@+id/chooseChallengeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chooseLabel"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" >
    </TextView>

    <CheckBox
        android:id="@+id/hazFenderz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Haz Fenderz" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/urban"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/urban_label" />

        <RadioButton
            android:id="@+id/gold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/gold_label" />

        <RadioButton
            android:id="@+id/drag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/drag_label" />

        <RadioButton
            android:id="@+id/test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/Test_Label" />
    </RadioGroup>

    <requestFocus />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_label"
        android:onClick="start" />

</LinearLayout>